--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-argparse>=1.4.0
-nltk>=3.5
-fasttext>=0.9.2
-langdetect>=1.0.8
-requests>=2.25.1
-torch>=1.7.1
-transformers>=4.5.1
-pycountry>=20.7.3
-sentencepiece>=0.1.91
-sacremoses>=0.0.43
+nltk==3.8.1
+fasttext==0.9.3
+langdetect==1.0.9
+requests==2.32.3
+torch==2.3.1
+transformers==4.44.2
+pycountry==24.6.1
+sentencepiece==0.2.0
+sacremoses==0.0.53
+tiktoken==0.7.0
